fix: table `getSelectedKeys` does not return the original repository keys